Bug fix sign algorithm